<resources>
    <string name="app_name">BaiduMusic</string>
    <string name="login_title_name">百度账号登录</string>
    <string name="login_user_name">手机号/用户名/邮编</string>
    <string name="login_password">密码</string>
    <string name="login_button">登录</string>
    <string name="massage_login">短信验证登录</string>
    <string name="other_login">|其他方式登录|</string>
    <string name="immediately_register">快速注册</string>
    <string name="playing_list">正在播放列表</string>
    <string name="cleat_all">全部清空</string>
    <string name="close">关闭</string>
    <string name="minibar_default_title">百度音乐 听到极致</string>
    <string name="default_time_zero">00:00</string>
    <string name="register">注册</string>
    <string name="all_author">全部歌手</string>
    <string name="hot_author">热门歌手</string>
    <string name="more">更多</string>
    <string name="chn_male_singer">华语男歌手</string>
    <string name="chn_female_singer">华语女歌手</string>
    <string name="chn_combination">华语组合</string>
    <string name="western_male_singer">欧美男歌手</string>
    <string name="western_female_singer">欧美女歌手</string>
    <string name="western_combination">欧美组合</string>
    <string name="kr_male_singer">韩国男歌手</string>
    <string name="kr_female_singer">韩国女歌手</string>
    <string name="kr_combination">韩国组合</string>
    <string name="jp_male_singer">日本男歌手</string>
    <string name="jp_female_singer">日本女歌手</string>
    <string name="jp_combination">日本组合</string>
    <string name="other_singer">其他歌手</string>
    <string name="immediately_login">立即登录</string>
    <string name="login_text">登录后,自动为您同步歌曲</string>
    <string name="exit_login">退出登录</string>
    <string name="like_song">我喜欢的单曲</string>
    <string name="noting_music">音乐空空如也</string>
    <string name="loca_music">本地音乐</string>
    <string name="all">全部</string>
    <string name="recent_play">最近播放</string>
    <string name="downdload">下载管理</string>
    <string name="_0">0首</string>
    <string name="k_song">我的 K 歌</string>
    <string name="buile_song_list">自建歌单</string>
    <string name="new_buile_song_list">新建歌单</string>
    <string name="collect_song_list">收藏歌单</string>
    <string name="cottect_log">遇到自己喜欢的歌单,记得点❤️幼</string>
    <string name="more_radio">更多电台分类</string>
    <string name="song_recommend">歌单推荐</string>
    <string name="search_hint">歌曲,歌手,专辑,歌词,伴奏</string>
    <string name="all_song_list">全部歌单</string>
    <string name="hot">热门</string>
    <string name="update_date">更新日期:</string>
    <string name="timing_closure">输入延时关闭秒数</string>
    <string name="like">喜欢</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="add">添加到</string>
    <string name="remove">移除</string>
    <string name="pass">跳过</string>
</resources>
