<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_five_dp"
        android:background="@color/colorTitle"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/recent_play_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/ten_dp"
            android:src="@mipmap/ic_back_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_play"
            android:textColor="#ffffff"
            android:textSize="@dimen/fifteen_sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/recent_play_return"/>

        <TextView
            android:id="@+id/recent_play_remove_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cleat_all"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/fifteen_sp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/twenty_dp"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/recent_play_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_marginEnd="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp" />

    <TextView
        android:id="@+id/nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/noting_music"
        android:textSize="@dimen/twenty_five_sp"
        android:visibility="gone" />
</RelativeLayout>