<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_five_dp"
        android:background="@color/colorTitle"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_immediately_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/five_dp"
            android:src="@mipmap/ic_back_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/more"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/fifteen_sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/twenty_dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_immediately"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_immediately_shape"
            android:text="@string/immediately_login"
            android:textColor="@color/colorLightBlue"
            android:textSize="@dimen/fifteen_sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/five_dp"
            android:text="@string/login_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_exit_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/twenty_dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fifteen_sp" />

        <TextView
            android:id="@+id/exit_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/one_hundred_dp"
            android:text="@string/exit_login"
            android:textSize="@dimen/fifteen_sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/colorDarkGrey" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:background="@mipmap/bt_setup_wifi_nor" />

        <ImageView
            android:id="@+id/alarm_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:background="@mipmap/bt_setup_auto_close_nor" />
    </LinearLayout>
</LinearLayout>