<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_five_dp"
        android:background="@color/colorTitle"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/all_author_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/five_dp"
            android:src="@mipmap/ic_back_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/all_author"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/fifteen_sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/ten_dp"
                    android:drawableLeft="@mipmap/songmenu_image2"
                    android:text="@string/hot_author"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/twenty_sp" />

                <LinearLayout
                    android:id="@+id/all_author_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/ten_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/ic_action_more" />
                </LinearLayout>
            </RelativeLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/all_author_view_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_hundred_fifty_dp" />

            <LinearLayout
                android:id="@+id/all_author_viewgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ten_dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/chn_male_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chn_male_singer"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/chn_female_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chn_female_singer"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/chn_combination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chn_combination"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/western_male_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/western_male_singer"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/western_female_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/western_female_singer"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/western_combination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/western_combination"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/kr_male_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kr_male_singer"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/kr_female_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kr_female_singer"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/kr_combination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kr_combination"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/jp_male_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jp_male_singer"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/jp_female_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jp_female_singer"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/jp_combination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jp_combination"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/other_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other_singer"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_action_more" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>